--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,8 @@
 ---
 import TiktokIcon from "../icons/TiktokIcon.astro";
-import WhatsappIcon from "../icons/WhatsappIcon.astro";
+
+import dataImmunotecSoledad from "../data/immunocal.json"
+import Boton from "./Boton.astro";
 interface FooterLink {
   label: string;
   href: string;
@@ -151,7 +153,7 @@ const {
         <div class="flex gap-4">
           {
             socialLinks.map((social) => (
-              <a
+              social.icon === "whatsapp" ?(  <Boton texto="hola" extra="w-10 h-10 rounded-full bg-gray-800 hover:bg-gray-700 flex items-center justify-center transition-colors" iconTamaño="24" flotante={dataImmunotecSoledad.immunocaltecSoledad.whatsapp}/>):( <a
                 href={social.href}
                 class="w-10 h-10 rounded-full bg-gray-800 hover:bg-gray-700 flex items-center justify-center transition-colors"
                 aria-label={social.name}
@@ -174,8 +176,9 @@ const {
                     <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z" />
                   </svg>
                 )}
-                {social.icon === "whatsapp" && <WhatsappIcon size="20" />}
-              </a>
+
+              </a> )
+             
             ))
           }
         </div>
