--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -30,11 +30,11 @@ const {
 
 <header class="bg-white shadow-sm sticky top-0 z-50">
   <nav
-    class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
+    class="max-w-7xl mx-auto px-4 sm:px-6 gap-4 lg:px-8"
     aria-label="Navegación principal"
   >
     <div class="flex justify-between items-center h-16 sm:h-20">
-      <div class="flex-shrink-0">
+      <div class="flex-shrink-0 pr-2 ">
         <a
           href="/"
           class="flex items-center gap-3 hover:opacity-80 transition-opacity"
@@ -42,7 +42,7 @@ const {
           <img
             src="/images/immunotec.svg"
             alt={logoAlt}
-            class="h-8 sm:h-10 min-w-50 lg:w-auto"
+            class="h-8 sm:h-10 min-w-50 xl:w-auto"
             width="40"
             height="40"
           />
