--- a/src/components/Boton.astro
+++ b/src/components/Boton.astro
@@ -1,41 +1,63 @@
 ---
 import type { whatsapp } from "../types/tipos";
+import WhatsappIcon from "../icons/WhatsappIcon.astro";
 interface Props {
   extra?:string;
   url?: string;
   texto: string;
+  pagina?:boolean;
+  iconTamaño?:string;
+  flotante?:whatsapp;
   whatsapp?: whatsapp;
 }
 
-const { url, texto, whatsapp, extra } = Astro.props;
+const { url, texto, whatsapp, extra, pagina, flotante , iconTamaño="30"} = Astro.props;
 
-const isWhatsApp = !!whatsapp;
+const isWhatsApp = !!whatsapp || !!flotante;
 const href = isWhatsApp
-  ? `https://wa.me/+51${whatsapp.numero}?text=${encodeURIComponent(whatsapp.mensaje || "Hola, me interesa saber más")}`
+  ? `https://wa.me/+51${whatsapp?.numero || flotante?.numero}?text=${encodeURIComponent(whatsapp?.mensaje ||flotante?.mensaje || "Hola, me interesa saber más")}`
   : url;
 
-const baseClass = "boton py-3 px-6  rounded-2xl text-white";
+const baseClass = "boton py-3 px-6 rounded-2xl text-white";
 const variantClass = isWhatsApp
   ? "bg-bases hover:bg-bases-hover"
   : "bg-bases hover:bg-bases-hover";
 ---
 
-{
-  whatsapp ? (
-    <a
-      href={href}
-      class={`${baseClass} ${variantClass} ${extra}`}
-      target="_blank"
-      rel="noopener noreferrer"
-    >
-      {texto}
-    </a>
-  ) : (
-    <a
-      href={href}
-      class={`${baseClass} ${variantClass} ${extra}`}
-    >
-      {texto}
-    </a>
-  )
+{whatsapp ? (
+  <a
+    href={href}
+    class={`${baseClass} ${variantClass} ${extra}`}
+    target="_blank"
+    rel="noopener noreferrer"
+  >
+    {texto}
+  </a>
+) : pagina ? (
+  <a
+    href={href}
+    target="_blank"
+    class={`${baseClass} ${variantClass} ${extra}`}
+  >
+    {texto}
+  </a>
+) : flotante ? (
+  <a
+    href={href}
+    title={`WhatsApp - Contacto directo con Soledad Consultora Immunotec`}
+    class={` ${extra}   `}
+    target="_blank"
+    rel="noopener noreferrer"
+  >
+    <WhatsappIcon size={` ${iconTamaño}`}/>
+  </a>
+) : (
+  <a
+    href={href}
+    class={`${baseClass} ${variantClass} ${extra}`}
+  >
+    {texto}
+  </a>
+)
 }
+
