--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,7 +8,7 @@ interface Props {
 const { dataImmunocal } = Astro.props;
 ---
 
-<section id="sobre-nosotros" class="py-8 space-y-4 scroll-mt-24 justify-center">
+<section id="sobre-nosotros" class="py-12 space-y-4 scroll-mt-24 justify-center">
   <div class="flex flex-col md:flex-row w-full justify-around">
     <div class="flex flex-col max-w-lg items-center p-4 gap-8">
       <Title titulo="¿Que es immunotec?" />
@@ -22,7 +22,7 @@ const { dataImmunocal } = Astro.props;
     </div>
 
     <iframe
-      class="h-auto w-full"
+      class="h-auto min-h-60 w-full"
       src="https://www.youtube.com/embed/OZtzCyUZYS8?si=eQoo8sHUKebz5fd3"
       title="YouTube video player"
       frameborder="0"
