--- a/src/components/Productos.astro
+++ b/src/components/Productos.astro
@@ -30,10 +30,10 @@ const isFeatured = variant === 'featured' || suplemento.nombre === 'Immunocal Pl
   suplemento.linkVideo &&(
 
       <div class="mb-12 lg:mb-16">
-        <div class="rounded-2xl overflow-hidden ">
-          <div class="relative" style="padding-bottom: 45%;">
+        <div class=" flex overflow-hidden ">
+          <div class="relative ">
             <iframe
-              class="absolute top-0 left-0 w-full h-full"
+              class=" min-h-60 top-0 left-0 w-full h-full"
               src={suplemento.linkVideo}
               title={`Video de ${suplemento.nombre}`}
               frameborder="0"
@@ -85,7 +85,7 @@ const isFeatured = variant === 'featured' || suplemento.nombre === 'Immunocal Pl
           </div>
 
           <div class="mt-8">
-            <Boton texto={suplemento.textoBoton} />
+            <Boton url={suplemento.urlPagina} pagina={true} texto={suplemento.textoBoton} />
           </div>
         </div>
       </div>
@@ -129,7 +129,7 @@ const isFeatured = variant === 'featured' || suplemento.nombre === 'Immunocal Pl
         )}
       </div>
 
-      <div class="bg-white rounded-3xl shadow-[0_25px_70px_-15px_rgba(0,0,0,0.2)] overflow-hidden border border-gray-200">
+      <div class=" ">
         <div class="grid lg:grid-cols-2">
           <div class="relative h-[400px] lg:h-auto">
             <img
@@ -180,7 +180,7 @@ const isFeatured = variant === 'featured' || suplemento.nombre === 'Immunocal Pl
             )}
 
             <div class="mt-10">
-              <Boton texto={suplemento.textoBoton} />
+              <Boton url={suplemento.urlPagina} pagina={true} texto={suplemento.textoBoton} />
             </div>
           </div>
         </div>
@@ -188,10 +188,10 @@ const isFeatured = variant === 'featured' || suplemento.nombre === 'Immunocal Pl
 
       {suplemento.linkVideo && (
         <div class="mt-10">
-          <div class="bg-gray-900 rounded-2xl overflow-hidden">
-            <div class="relative" style="padding-bottom: 40%;">
+          <div class="bg-gray-900  overflow-hidden">
+            <div class="relative">
               <iframe
-                class="absolute top-0 left-0 w-full h-full"
+                class=" min-h-50 md:min-h-100  w-full h-full"
                 src={suplemento.linkVideo}
                 title={`Video de ${suplemento.nombre}`}
                 frameborder="0"
@@ -233,10 +233,10 @@ const isFeatured = variant === 'featured' || suplemento.nombre === 'Immunocal Pl
               loading="lazy"
             />
                   {suplemento.linkVideo && (
-          <div class=" overflow-hidden ">
-            <div class="relative" style="padding-bottom: 42%;">
+          <div class=" flex  overflow-hidden">
+            <div class="relative  w-full ">
               <iframe
-                class="absolute top-0 left-0 w-full h-full"
+                class=" min-h-60 md:min-h-70   w-full h-full"
                 src={suplemento.linkVideo}
                 title={`Video de ${suplemento.nombre}`}
                 frameborder="0"
@@ -289,7 +289,7 @@ const isFeatured = variant === 'featured' || suplemento.nombre === 'Immunocal Pl
           )}
 
           <div class="mt-8">
-            <Boton texto={suplemento.textoBoton} />
+            <Boton url={suplemento.urlPagina} pagina={true} texto={suplemento.textoBoton} />
           </div>
         </div>
       </div>
