--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import "../styles/global.css";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
+import Boton from "../components/Boton.astro";
 interface Props {
   ocultar: boolean;
   title: string;
@@ -44,8 +45,13 @@ const {
     <meta property="twitter:title" content={title} />
     <meta property="twitter:description" content={description} />
     <meta property="twitter:image" content={ogImgUrl} />
+    {ocultar && 
+    <script type="text/javascript"
+  src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+
+    }
   </head>
-  <body class="font-poppins">
+  <body class="font-poppins relative">
     {ocultar && <Header />}
 
     <slot />
