--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,10 @@ import Hero from "../components/Hero.astro";
 import Productos from "../components/Productos.astro";
 import SectionProfesionales from "../components/SectionProfesionales.astro";
 import SectionReferidos from "../components/SectionReferidos.astro";
+import Form from "../components/Form.astro";
+import Informacio from "../components/Informacio.astro";
+import Title from "../components/Title.astro";
+import Boton from "../components/Boton.astro";
 import dataImmunotecSoledad from "../data/immunocal.json";
 
 const productos = dataImmunotecSoledad.immunocaltecSoledad.productosImmunotec;
@@ -14,24 +18,45 @@ const productos = dataImmunotecSoledad.immunocaltecSoledad.productosImmunotec;
 <Layout title="hola" description="hola" ocultar={true}>
   <Slider images={dataImmunotecSoledad.immunocaltecSoledad.banners} />
   <main
-    class="px-6 max-w-7xl mx-auto min-h-screen flex flex-col justify-center"
+    class="px-6 max-w-7xl mx-auto min-h-screen flex flex-col justify-center relative"
   >
     <Hero dataImmunocal={dataImmunotecSoledad.immunocaltecSoledad.whatsapp} />
 
     <SliderDeportistas
       testimonials={dataImmunotecSoledad.immunocaltecSoledad.testimonials}
     />
+    <Informacio/>
     <section>
       <img src="/images/info.jpg" alt="" class="" />
     </section>
-<SectionProfesionales/>
+    <SectionProfesionales />
     <section id="productos" class="gap-8 scroll-mt-24 space-y-4">
-    {
-      productos.map((producto, index) => (
-        <Productos suplemento={producto} reverse={index % 2 !== 0} />
-      ))
-    }
+      {
+        productos.map((producto, index) => (
+          <Productos suplemento={producto} reverse={index % 2 !== 0} />
+        ))
+      }
     </section>
-<SectionReferidos/>
+<section class="text-center py-12 bg-white text-black">
+  <Title titulo="Empieza hoy tu camino hacia una salud óptima" />
+  <p class="text-lg mb-6">
+    Descubre el poder del glutatión y el respaldo clínico de Immunocal. ¡Tu cuerpo lo merece!
+  </p>
+
+  <Boton
+    url="https://www.immunotec.com/es-PE/soledadm2024/products"
+    pagina={true}
+    texto="Ver productos"
+    
+   
+  />
+</section>
+
+
+    <SectionReferidos
+      whatsapplink={dataImmunotecSoledad.immunocaltecSoledad.whatsapp}
+    />
+    <Form />
+    <Boton texto="hola" flotante={dataImmunotecSoledad.immunocaltecSoledad.whatsapp} extra=" bg-green-500 boton rounded-full p-4 text-white fixed bottom-4 right-4  z-50"/>
   </main>
 </Layout>
