modificando tamaño de letra y altura del slider a 40 svh

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -12,7 +12,7 @@ const { dataImmunocal } = Astro.props;
   <div class="flex flex-col md:flex-row w-full justify-around">
     <div class="flex flex-col max-w-lg items-center p-4 gap-8">
       <Title titulo="¿Que es immunotec?" />
-      <p class="text-gray-700">
+      <p class="text-gray-700 text-base lg:text-lg">
         Immunotec es una empresa Canadiense dedicada a la investigación del
         sistema inmunológico por más de 45 años, con presencia en 14 países.
         Immunotec está aportando un mayor bienestar y una mayor prosperidad en
