--- a/src/components/SectionReferidos.astro
+++ b/src/components/SectionReferidos.astro
@@ -15,7 +15,7 @@ const {whatsapplink}=Astro.props;
   <Title titulo="Registrate al Programa de Clientes Preferentes" />
   <div class="flex flex-col md:flex-row gap-8 w-full justify-around text-gray-700">
     <div
-      class="md:max-w-lg gap-8 text-sm lg:text-base flex flex-col justify-center items-center"
+      class="md:max-w-lg gap-8 text-base lg:text-lg flex flex-col justify-center items-center"
     >
       <p>
         <strong class="text-black">Regístrate al programa de lealtad</strong> de los clientes de Immunotec,
