--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,9 +37,9 @@ const productos = dataImmunotecSoledad.immunocaltecSoledad.productosImmunotec;
         ))
       }
     </section>
-<section class="text-center py-12 bg-white text-black">
+<section class="text-center py-12 bg-white space-y-4 text-black">
   <Title titulo="Empieza hoy tu camino hacia una salud óptima" />
-  <p class="text-lg mb-6">
+  <p class="text-lg mb-6 ">
     Descubre el poder del glutatión y el respaldo clínico de Immunocal. ¡Tu cuerpo lo merece!
   </p>
 
