--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -38,7 +38,7 @@ const {
 
         <div class="space-y-4">
           <article
-            class="flex items-start gap-4 p-5 bg-white rounded-xl shadow-sm border border-gray-200 hover:border-[#2584FF] transition-colors"
+            class="flex items-start gap-4  bg-white rounded-xl   transition-colors"
           >
             <div
               class="w-12 h-12 rounded-full bg-[#2584FF] bg-opacity-10 flex items-center justify-center flex-shrink-0"
@@ -72,7 +72,7 @@ const {
           </article>
 
           <article
-            class="flex items-start gap-4 p-5 bg-white rounded-xl shadow-sm border border-gray-200 hover:border-[#2584FF] transition-colors"
+            class="flex items-start gap-4  rounded-xl  transition-colors"
           >
             <div
               class="w-12 h-12 rounded-full bg-[#2584FF] bg-opacity-10 flex items-center justify-center flex-shrink-0"
@@ -106,7 +106,7 @@ const {
           </article>
 
           <article
-            class="flex items-start gap-4 p-5 bg-white rounded-xl shadow-sm border border-gray-200 hover:border-[#2584FF] transition-colors"
+            class="flex items-start gap-4 rounded-xl  transition-colors"
           >
             <div
               class="w-12 h-12 rounded-full bg-[#2584FF] bg-opacity-10 flex items-center justify-center flex-shrink-0"
