--- a/src/components/SectionProfesionales.astro
+++ b/src/components/SectionProfesionales.astro
@@ -4,7 +4,7 @@ import Title from "../components/Title.astro";
 
 <section id="investigacion" class="flex flex-col scroll-mt-24 justify-center items-center py-12 gap-8 space-y-4">
   <Title titulo="La Ciencia detrás de Immunocal" />
-  <div class="grid gap-8 max-w-md md:max-w-none grid-cols-1 text-sm lg:text-base md:grid-cols-5 text-gray-700">
+  <div class="grid gap-8 max-w-md md:max-w-none grid-cols-1 text-base lg:text-lg md:grid-cols-5 text-gray-700">
     <div class="md:col-span-2 space-y-4 gap-4 flex flex-col">
       <div class="flex gap-4 w-full justify-around items-center">
         <img src="/images/cientifico-1.webp" alt="" class="rounded-full w-auto   h-45 " />
