agregando producto nuevo

--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -232,7 +232,7 @@ const {
 </section>
 
 <script type="text/javascript">
-  emailjs.init("TRoMJBFLwwq32FCM2");
+  emailjs.init('M6wK_SSYtElOyQnaj');
 
   const btn = document.getElementById("button");
   const form = document.getElementById("form");
@@ -244,7 +244,8 @@ const {
     btn.disabled = true;
 
     const serviceID = "default_service";
-    const templateID = "template_vk05yr5";
+       const templateID = 'template_ukuj9bq';
+
 
     emailjs.sendForm(serviceID, templateID, this).then(
       () => {
