modificando el componente title

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -64,16 +64,15 @@ const {
     {
       title: "Legal",
       links: [
-        { label: "Privacidad", href: "/privacidad" },
-        { label: "Términos", href: "/terminos" },
+        { label: "Términos", href: "https://www.immunotec.com/es-PE/soledadm2024/legal" },
       ],
     },
   ],
   socialLinks = [
-    { name: "Facebook", href: "#", icon: "facebook" },
-    { name: "Tiktok", href: "#", icon: "tiktok" },
-    { name: "Instagram", href: "#", icon: "instagram" },
-    { name: "YouTube", href: "#", icon: "youtube" },
+    { name: "Facebook", href: "https://www.facebook.com/share/17DrUebXvD/", icon: "facebook" },
+    { name: "Tiktok", href: "https://www.tiktok.com/@soledadmc24", icon: "tiktok" },
+    { name: "Instagram", href: "https://www.instagram.com/Soledadmc24/", icon: "instagram" },
+
     { name: "Whatsapp", href: "#", icon: "whatsapp" },
   ],
   showNewsletter = true,
