--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -65,7 +65,7 @@ const {
                   href="mailto:contacto@tuempresa.com"
                   class="hover:text-[#2584FF] transition-colors"
                 >
-                  contacto@gmail.com
+                  soledadmc2702@gmail.com
                 </a>
               </address>
             </div>
@@ -99,7 +99,7 @@ const {
                   href="tel:+51999999999"
                   class="hover:text-[#2584FF] transition-colors"
                 >
-                  +51 999 999 999
+                  +51 932 468 013
                 </a>
               </address>
             </div>
