--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,13 +17,13 @@ const {
   title,
   description,
   author = "Pedro Alejandro",
-  canonicalURL = "https://tusitio.com",
-  ogImgUrl = "/default-og-image.jpg",
+  canonicalURL = "https://soledadconsultoraimmunotec.com/",
+  ogImgUrl = "/images/banner.jpg",
 } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="es" class="scroll-smooth">
+<html lang="es-pe" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content={description} />
