--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import dataImmunotecSoledad from "../data/immunocal.json";
 const productos = dataImmunotecSoledad.immunocaltecSoledad.productosImmunotec;
 ---
 
-<Layout title="hola" description="hola" ocultar={true}>
+<Layout title="Immunocal Perú | Salud, Energía y Bienestar con Glutatión" description="Descubre Immunocal en Perú: fortalece tu sistema inmunológico, mejora tu energía y bienestar con glutatión clínicamente probado. ¡Conviértete en cliente preferente!" ocultar={true}>
   <Slider images={dataImmunotecSoledad.immunocaltecSoledad.banners} />
   <main
     class="px-6 max-w-7xl mx-auto min-h-screen flex flex-col justify-center relative"
