--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,7 +11,7 @@ const { dataImmunocal } = Astro.props;
 <section id="sobre-nosotros" class="py-12 space-y-4 scroll-mt-24 justify-center">
   <div class="flex flex-col md:flex-row w-full justify-around">
     <div class="flex flex-col max-w-lg items-center p-4 gap-8">
-      <Title titulo="¿Que es immunotec?" />
+      <Title titulo="¿Que es immunotec?" principal={true}/>
       <p class="text-gray-700 text-base lg:text-lg">
         Immunotec es una empresa Canadiense dedicada a la investigación del
         sistema inmunológico por más de 45 años, con presencia en 14 países.
