agregando componente seccion Emprende

--- a/src/components/Boton.astro
+++ b/src/components/Boton.astro
@@ -31,7 +31,7 @@ const variantClass = isWhatsApp
     target="_blank"
     rel="noopener noreferrer"
   >
-    {texto}
+   <slot/> {texto}
   </a>
 ) : pagina ? (
   <a
